add chapter navigation

--- a/chapter-16.ipynb
+++ b/chapter-16.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "80b52ac1",
+   "metadata": {},
+   "source": [
+    "[Back to Table of Contents](https://www.shannonmburns.com/Psyc158/intro.html)\n",
+    "\n",
+    "[Previous: Chapter 15 - Models with Categorical Outcomes](https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-15.ipynb)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "684af125",
@@ -1008,6 +1018,14 @@
     "- Calculate a 95% confidence interval\n",
     "- Interpret the meaning of a confidence interval of an estimate\n",
     "- Add confidence intervals to model visualizations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "592524ce",
+   "metadata": {},
+   "source": [
+    "[Next: Chapter 17 - Significance Testing](https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-17.ipynb)"
    ]
   }
  ],
