--- a/chapter-19.ipynb
+++ b/chapter-19.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7b5eb665",
+   "metadata": {},
+   "source": [
+    "[Back to Table of Contents](https://www.shannonmburns.com/Psyc158/intro.html)\n",
+    "\n",
+    "[Previous: Chapter 18 - Significance Testing with Whole Models](https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-18.ipynb)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "00f2b2cf",
@@ -553,6 +563,14 @@
     "- Define statistical power\n",
     "- Explain why statistical power is important\n",
     "- Run a power plan"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a78a67c4",
+   "metadata": {},
+   "source": [
+    "[Next: Chapter 20 - Sources of Model Bias](https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-20.ipynb)"
    ]
   }
  ],
