--- a/chapter-2.ipynb
+++ b/chapter-2.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "d41ed081",
+   "metadata": {},
+   "source": [
+    "[Back to Table of Contents](https://www.shannonmburns.com/Psyc158/intro.html)\n",
+    "\n",
+    "[Previous: Chapter 1 - Intro to Doing Statistics](https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-1.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "221999bb",
    "metadata": {},
    "source": [
@@ -513,6 +523,14 @@
     "- Summarize the major ideas in statistics and what they mean\n",
     "- Code with if/else, for, and while control blocks in R\n",
     "- Write your own R function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ece3453",
+   "metadata": {},
+   "source": [
+    "[Next: Chapter 3 - What are Data](https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-3.ipynb)"
    ]
   }
  ],
