--- a/chapter-20.ipynb
+++ b/chapter-20.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "50a5336e",
+   "metadata": {},
+   "source": [
+    "[Back to Table of Contents](https://www.shannonmburns.com/Psyc158/intro.html)\n",
+    "\n",
+    "[Previous: Chapter 19 - Evaluating Effect Sizes](https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-19.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "110d1b35",
    "metadata": {},
    "source": [
@@ -546,6 +556,14 @@
    "metadata": {},
    "source": [
     "Or, controlling for time point 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a4af6db",
+   "metadata": {},
+   "source": [
+    "[Next: Chapter 21 - Bayesian Statistics](https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-21.ipynb)"
    ]
   }
  ],
