--- a/chapter-3.ipynb
+++ b/chapter-3.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "c2ecd4c2",
+   "metadata": {},
+   "source": [
+    "[Back to Table of Contents](https://www.shannonmburns.com/Psyc158/intro.html)\n",
+    "\n",
+    "[Previous: Chapter 2 - Statistical Reasoning](https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-2.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "60f2c23b",
    "metadata": {},
    "source": [
@@ -642,6 +652,14 @@
     "- Do basic math operations on vectors\n",
     "- Talk about in what ways data can be more or less reliable\n",
     "- Define the four types of validity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9c6e063",
+   "metadata": {},
+   "source": [
+    "[Next: Chapter 4 - Organizing Data](https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-4.ipynb)"
    ]
   }
  ],
