add gifs to representativeness bias in ch20

--- a/chapter-20.ipynb
+++ b/chapter-20.ipynb
@@ -336,15 +336,149 @@
     "\n",
     "That can happen just by bad luck during random sampling: we just happen to draw a particularly strange sample by chance. But over many samples, random sampling will insure that on the whole our samples are representative and our estimates unbiased. \n",
     "\n",
-    "If there's any reason our sampling process is not representative, those estimates might be biased even across many samples. For example, there is a famous saying that \"money does not buy happiness\". If you were to test this statistically, you might look for a significant relationship between people's happiness levels and how much money they make. But if you were to conduct this research only with college students (who come from a higher income bracket on average than the world population), you would only be investigating the relationship between money and happiness in college students, not all people. No matter what sample you drew, if it was not representative of the wider population, you might get a biased estimate (and you might miss the fact that [money is indeed correlated with happiness](http://content.time.com/time/magazine/article/0,9171,2019628,00.html) at lower income levels where financial security is threatened). If your estimate is biased due to nonrepresentative sampling, it might apply to this specific population, but not **generalize** to other populations of people. \n",
+    "If there's any reason our sampling process is not representative, those estimates might be biased even across many samples. For example, there is a famous saying that \"money does not buy happiness\". If you were to test this statistically, you might look for a significant relationship between people's happiness levels and how much money they make. But if you were to conduct this research only with college students (who come from a higher income bracket on average than the world population), you would only be investigating the relationship between money and happiness in people with more money, not across all income brackets. No matter what sample you drew, if it was not representative of the wider population, you might get a biased estimate (and you might miss the fact that [money is indeed correlated with happiness](http://content.time.com/time/magazine/article/0,9171,2019628,00.html) at lower income levels where financial security is threatened). If your estimate is biased due to nonrepresentative sampling, it might apply to this specific population, but not **generalize** to other populations of people. \n",
     "\n",
-    "A nonrepresentative sample doesn't ensure that your estimates will be biased. Estimates will only be biased if your sample is non-representative on variables that are involved in the data generation process you are investigating. If you are investigating the relationship between money and happiness but only have a sample of right-handed people, there's a pretty good argument to make that being right or left handed doesn't influence how happy money makes you. So the assumption of representativeness only applies to variables that are involved in the particular data generation process you are investigating.   \n",
+    "One way a sample can be unrepresentative is if you don't have values from the full range of reasonable values on your outcome. We can see the impact of this with a simulation. First, we will simulate a medium relationship between two variables x and y and see what sort of sampling distribution we would get across many samples of those variables:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e20ebfa6",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "x <- runif(10000,0,1)    #defining a random variable\n",
+    "e <- rnorm(10000,0,1)    #some unexplained error\n",
+    "y <- 2 + 0.3*x + e  #0.3 is the true b1 value in population \n",
+    "sim_df <- data.frame(x, y)\n",
     "\n",
+    "#sampling many estimates of b1\n",
+    "b1s <- vector(length=1000)\n",
+    "for (i in 1:1000) {\n",
+    "    sim_sample <- sample_n(sim_df, size=100, replace=TRUE) \n",
+    "    sim_model <- lm(y ~ x, data = sim_sample)  #fitting a linear model instead of nonlinear\n",
+    "    b1s[i] <- sim_model$coefficients[[2]]\n",
+    "}\n",
+    "\n",
+    "#central tendency of b1 estimates\n",
+    "b1s_df <- data.frame(b1s)\n",
+    "gf_histogram(~ b1s, data = b1s_df) %>% gf_vline(., xintercept = 0.3) #true b1 is 0.3\n",
+    "mean(b1s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4cdd9d7",
+   "metadata": {},
+   "source": [
+    "Any one sample may find a b<sub>1</sub> estimate that is larger or smaller than 0.3, but in general they will cluster around 0.3.\n",
+    "\n",
+    "However, let's say we only sample people who are high on the outcome variable score. The full range of that variable is about -2 to 6, but we'll only select datapoints that had y values of at least 4. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b18013f",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "x <- runif(40000,0,1)    #oversimulating since we're going to cut out ~3/4 of the data\n",
+    "e <- rnorm(40000,0,1)    \n",
+    "y <- 2 + 0.3*x + e       #0.3 is the true b1 value in population \n",
+    "sim_df <- data.frame(x, y)\n",
+    "high_sim_df <- filter(sim_df, y>4) #filtering to only large y values\n",
+    "\n",
+    "#sampling many estimates of b1\n",
+    "b1s <- vector(length=1000)\n",
+    "for (i in 1:1000) {\n",
+    "    sim_sample <- sample_n(high_sim_df, size=100, replace=TRUE) \n",
+    "    sim_model <- lm(y ~ x, data = sim_sample)  #fitting a linear model instead of nonlinear\n",
+    "    b1s[i] <- sim_model$coefficients[[2]]\n",
+    "}\n",
+    "\n",
+    "#central tendency of b1 estimates\n",
+    "b1s_df <- data.frame(b1s)\n",
+    "gf_histogram(~ b1s, data = b1s_df) %>% gf_vline(., xintercept = 0.3) #true b1 is 0.3\n",
+    "mean(b1s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d268603",
+   "metadata": {},
+   "source": [
+    "The true relationship between x and y is 0.3, but by truncating the y variable, our sampling distribution is biased downward. \n",
+    "\n",
+    "When your data is missing the full range of the outcome variable, there's less variation present that would be explained by the predictor. Noise now has a bigger proportional presence, and the predictor can't reliably explain noise. \n",
+    "\n",
+    "<img src=\"images/ch20-selectiony.gif\" width=\"500\">\n",
+    "\n",
+    "*[gif source](https://sites.google.com/view/robertostling/home/teaching)*\n",
+    "\n",
+    "Interestingly, the same is not true for truncating the x variable: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c436b583",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "x <- runif(40000,0,1)    #oversimulating since we're going to cut out ~3/4 of the data\n",
+    "e <- rnorm(40000,0,1)    \n",
+    "y <- 2 + 0.3*x + e       #0.3 is the true b1 value in population \n",
+    "sim_df <- data.frame(x, y)\n",
+    "high_sim_df <- filter(sim_df, x>0.75) #filtering to only large x values\n",
+    "\n",
+    "#sampling many estimates of b1\n",
+    "b1s <- vector(length=1000)\n",
+    "for (i in 1:1000) {\n",
+    "    sim_sample <- sample_n(high_sim_df, size=100, replace=TRUE) \n",
+    "    sim_model <- lm(y ~ x, data = sim_sample)  #fitting a linear model instead of nonlinear\n",
+    "    b1s[i] <- sim_model$coefficients[[2]]\n",
+    "}\n",
+    "\n",
+    "#central tendency of b1 estimates\n",
+    "b1s_df <- data.frame(b1s)\n",
+    "gf_histogram(~ b1s, data = b1s_df) %>% gf_vline(., xintercept = 0.3) #true b1 is 0.3\n",
+    "mean(b1s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5966e2b1",
+   "metadata": {},
+   "source": [
+    "On average, the sampling distribution will still cluster around an effect of 0.3 for x. The difference here is that the sampling distribution is *wider*, despite having the same sample size. It isn't the model coefficient that is biased in this case, but the *standard error* is biased to be too big. On average we will detect the right effect, but it will be harder to get an accurate picture of it. If the true effect is 0.3, we will find small nonsignificant effects more often than we planned for. In addition, if the true effect is 0, we will find large false positive effects more often than we planned for. We will commit more Type I AND Type II errors.\n",
+    "\n",
+    "<img src=\"images/ch20-selectionx.gif\" width=\"500\">\n",
+    "\n",
+    "*[gif source](https://sites.google.com/view/robertostling/home/teaching)*\n",
+    "\n",
+    "This is only true however if the true relationship in the population is linear. If the slope of the regression line should change along different values of x, but you only sampled some of those values, you will miss the true contour of the regression line. This is the problem that happened in the money and happiness example discussed above.\n",
+    "\n",
+    "Another instance of bias due to representativeness is when two predictor variables interact, such that predictor 2 influences the relationship between predictor 1 and the outcome, but we only collected data from some values of predictor 2. For example, if there's a difference in how people give to charity between individualistic and collectivistic cultures, but you only sampled people born in the US. \n",
+    "\n",
+    "Now, a nonrepresentative sample doesn't ensure that your estimates will be biased. Estimates will only be biased if your sample is non-representative on variables that are involved in the data generation process you are investigating. If you are investigating the relationship between money and happiness but only have a sample of right-handed people, there's a pretty good argument to make that being right or left handed doesn't influence how happy money makes you. So the assumption of representativeness only applies to variables that are involved in the particular data generation process you are investigating. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c747cb5b",
+   "metadata": {},
+   "source": [
     "### How to check for assumption\n",
     "\n",
-    "There aren't great ways to check if your samples are representative. You can reason about what variables are likely to affect your outcome of interest and try to make sure that the distribution of those variables in your sample matches what is known about humans generally, but that requires knowing what distribution to check for. We know more about the sex distribution in the population than the distribution of attitudes on economic policy. If you don't know what distribution of values to check for, you can at least check that the full range of likely values in your variables are represented. That way you're not leaving out major swaths of the population entirely.   \n",
-    "\n",
-    "It is difficult to know all variables that are important to take into account and to be representative on. The best you can do there is read about other research in your field to stay abreast of what others have found, and continue developing psychological research. \n",
+    "There aren't great ways to check if your samples are representative. You need to know about the expected range of the variables in your model, and if there are any moderator variables out there that you haven't included. If you aren't familiar with your research domain enough to know these answers, it will be difficult to catch when your sample isn't representative. You can try to include representativeness on major demographic variables like sex, race, etc. as a default to catch common reasons for nonrepresentativeness, but that doesn't ensure you're not missing something else important. Also, just because a study was run on only US college students, that doesn't mean *for sure* that the sample is not representative. There has to be a good reason to expect truncated age and culture to make a difference on the estimated effect. The best you can do here is read about other research in your field to stay abreast of what others have found, and continue developing psychological research. \n",
     "\n",
     "### What to do if assumption is violated\n",
     "\n",
